# omzet

./: Cargo.toml  README.md  flake.nix
example/: config.toml
src/: app.rs  config.rs  db.rs  job_orchestration.rs  main.rs  runner.rs  workflow.rs
src/workflow_runner/: builtin_task.rs  common.rs  custom_task.rs  mod.rs  runner.rs  task.rs  util.rs
