[package]
name = "omzet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dirs = "6.0.0"
ez-ffmpeg = "0.4.0"
globset = "0.4.16"
run_script = "0.11.0"
rusqlite = "^0.32.1"
rusqlite_migration = "1.3.1"
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "2.0.12"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["std", "env-filter"]}
uuid = { version = "1.16.0", features = [ "v4" ] }

[dev-dependencies]
tempdir = "0.3.7"
